--- a/index.html
+++ b/index.html
@@ -1,50 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <title>Accueil</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <main>
-      <marquee direction="down" width="900" height="400" behavior="alternate" style="border:solid">
-  <marquee behavior="alternate">
-    Bienvenue dans mon espace professionnel
-  </marquee>
-</marquee>
-
-  <a href="index1.html">Entrer</a>
 
 
+        <div class="mp">
 
-  <ul>
+            <div class="back"></div>
 
-       <li>
-           <a href="#" "target class="_blank"> <span class="premiere cool"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></span></a>
-       </li>
-       <li>
-           <a href="#" "target class="_blank"> <span class="seconde cool"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></span></a>
-      </li>
+        </div>
+        <div class="btn">
+           <a href="index1.html"><img src="image/bouton2.png"></a>
 
-      <li>
-          <a href="#" target class="_blank"><span class="troisieme cool"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></span></a>
-
-         </li>
-
-      <li>
-          <a href="#"" target class="_blank"><span class="quatrieme cool"><i class="fa fa-google-plus-official fa-2x" aria-hidden="true"></i></span></a>
-
-      </li>
-
-      <li>
-          <a href="#" target class="_blank"><span class="cinquieme cool"></span><i class="fa fa-download fa-2x" aria-hidden="true"></i></a>
-      </li>
-
-
-  </ul>
-
+        </div>
 
     </main>
-  </body>
+</body>
+
 </html>
